--- a/frontpage/css/lrtk.css
+++ b/frontpage/css/lrtk.css
@@ -16,7 +16,7 @@ html,body,form,p,div,h1,h2,h3,h4,h5,h6{-webkit-text-size-adjust:none; font-weigh
 
 .common{margin:0 auto; width:100%; position:relative;}
 
-.common ul li{margin-left:20px;}
+.common ul li{margin-left:20px;min-width:260px;}
 
 .clear{clear:both;}
 
